--- a/public/static/scss/menu-sidebar.module.scss
+++ b/public/static/scss/menu-sidebar.module.scss
@@ -24,7 +24,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     margin-top: 10px;
-    min-height: 100vh;
+    height: calc(100vh - 70px);
     & .active-menu {
         background-color: white;
         color: #2e6852 !important;
@@ -119,4 +119,320 @@
             }
         }
     }
+    & .tooltip-menu {
+        position: fixed;
+        margin-left: 190px;
+        width: 120px;
+        height: 40px;
+        min-height: 40px;
+        background-color: #338f6c;
+        padding: 5px;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        display: none;
+        & .tooltip-collapse-menu {
+            margin-top: 10px;
+        }
+        & .tooltip-sub-menu {
+            justify-content: center;
+            & .active-menu {
+                background-color: white;
+                color: #2e6852 !important;
+                font-weight: bold !important;
+                border-top-left-radius: 10px;
+                border-bottom-left-radius: 10px;
+                margin-left: 0px;
+                border-left-color: white !important;
+                width: 100%;
+                &:hover {
+                    background-color: white !important;
+                    cursor: default !important;
+                }
+            }
+            & .tooltip-sub-list-menu {
+                border-width: 1px;
+                border-top-color: #a3d4c2;
+                border-top-style: solid;
+                &:hover {
+                    background-color: #318364;
+                    cursor: pointer;
+                }
+                padding: 10px 10px;
+                height: 30px;
+                color: white;
+                align-items: center;
+                font-size: 13px;
+                display: flex;
+                gap: 10px;
+                font-weight: 200;
+                word-break: break-all;
+                & .tooltip-icon-menu {
+                    display: flex;
+                    font-size: 16px;
+                }
+            }
+        }
+    }
 }
+
+// Drawer
+
+.contain-sidebar-drawer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 100vh;
+    background-color: #338f6c;
+    -webkit-animation: slide-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	animation: slide-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+.sidebar-header-drawer {
+    display: flex;
+    background-color: #29795b;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 10px 20px;
+    color: white;
+}
+
+.sidebar-body-drawer {
+    user-select: none;
+    :global .MuiCollapse-wrapperInner {
+        width: 100%;
+    }
+    overflow-y: auto;
+    overflow-x: hidden;
+    margin-top: 10px;
+    height: calc(100vh - 70px);
+    & .active-menu {
+        background-color: white;
+        color: #2e6852 !important;
+        font-weight: bold !important;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        margin-left: 10px;
+        &:hover {
+            background-color: white !important;
+            cursor: default !important;
+        }
+    }
+    & .list-menu {
+        &:hover {
+            background-color: #318364;
+            cursor: pointer;
+        }
+        position: relative;
+        padding: 10px 10px 10px 25px;
+        display: flex;
+        height: 30px;
+        gap: 20px;
+        font-weight: 200;
+        align-items: center;
+        font-size: 13px;
+        color: white;
+        & .icon-menu {
+            display: flex;
+            font-size: 16px;
+        }
+        & .notify-badge {
+            position: absolute;
+            font-size: 10px;
+            z-index: 5;
+            background-color: #ffb800;
+            font-weight: bold;
+            border-radius: 100%;
+            width: 20px;
+            height: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            right: 30px;
+        }
+        & .icon-collapse {
+            font-size: 16px;
+            display: flex;
+            position: absolute;
+            right: 20px;
+            top: 20px;
+        }
+    }
+
+    & .sub-menu {
+        padding: 0px 10px 0px 30px;
+        & .active-menu {
+            background-color: white;
+            color: #2e6852 !important;
+            font-weight: bold !important;
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+            margin-left: 0px;
+            border-left-color: white !important;
+            width: 100%;
+            &:hover {
+                background-color: white !important;
+                cursor: default !important;
+            }
+        }
+        & .sub-list-menu {
+            &:hover {
+                background-color: #318364;
+                cursor: pointer;
+            }
+            width: 100%;
+            padding: 10px 0px;
+            height: 30px;
+            color: white;
+            align-items: center;
+            font-size: 13px;
+            display: flex;
+            gap: 10px;
+            padding-left: 10px;
+            font-weight: 200;
+            border-left-color: #9ccebb;
+            border-width: 2px;
+            border-left-style: solid;
+            word-break: break-all;
+            & .icon-menu {
+                display: flex;
+                font-size: 16px;
+            }
+        }
+    }
+    & .tooltip-menu {
+        position: fixed;
+        margin-left: 190px;
+        width: 120px;
+        height: 40px;
+        min-height: 40px;
+        background-color: #338f6c;
+        padding: 5px;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        display: none;
+        & .tooltip-collapse-menu {
+            margin-top: 10px;
+        }
+        & .tooltip-sub-menu {
+            justify-content: center;
+            & .active-menu {
+                background-color: white;
+                color: #2e6852 !important;
+                font-weight: bold !important;
+                border-top-left-radius: 10px;
+                border-bottom-left-radius: 10px;
+                margin-left: 0px;
+                border-left-color: white !important;
+                width: 100%;
+                &:hover {
+                    background-color: white !important;
+                    cursor: default !important;
+                }
+            }
+            & .tooltip-sub-list-menu {
+                border-width: 1px;
+                border-top-color: #a3d4c2;
+                border-top-style: solid;
+                &:hover {
+                    background-color: #318364;
+                    cursor: pointer;
+                }
+                padding: 10px 10px;
+                height: 30px;
+                color: white;
+                align-items: center;
+                font-size: 13px;
+                display: flex;
+                gap: 10px;
+                font-weight: 200;
+                word-break: break-all;
+                & .tooltip-icon-menu {
+                    display: flex;
+                    font-size: 16px;
+                }
+            }
+        }
+    }
+}
+
+.burger-menu {
+    position: absolute;
+    font-size: 25px;
+    color: #338f6c;
+    padding: 10px;
+    & .burger-icon-menu {
+        display: none;
+        cursor: pointer;
+    }
+}
+
+@media screen and (max-width: 1060px) {
+    .contain-sidebar {
+        width: 60px;
+    }
+    .sidebar-body {
+        & .menu-name,
+        & .icon-collapse {
+            display: none !important;
+        }
+        & .list-menu {
+            padding: 10px 0;
+            justify-content: center;
+            &:hover {
+                & .tooltip-menu {
+                    display: flex !important;
+                    justify-content: center;
+                    align-items: center;
+                    height: auto !important;
+                }
+            }
+        }
+        & .collapse-menu {
+            display: none;
+        }
+        & .notify-badge {
+            left: 32px;
+            top: 3px;
+        }
+    }
+    .sidebar-header {
+        & .header-title {
+            display: none !important;
+        }
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .burger-icon-menu {
+        display: block !important;
+    }
+    .contain-sidebar {
+        display: none;
+    }
+}
+
+// Animation
+@-webkit-keyframes slide-right {
+    0% {
+      -webkit-transform: translateX(-100px);
+              transform: translateX(-100px);
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+    }
+  }
+  @keyframes slide-right {
+    0% {
+      -webkit-transform: translateX(-100px);
+              transform: translateX(-100px);
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+    }
+  }
+  
