--- a/public/static/scss/global.scss
+++ b/public/static/scss/global.scss
@@ -25,6 +25,19 @@ body {
     padding: 10px;
     margin-left: 220px;
 }
+.button {
+    background: #82b2a0;
+    border: none;
+    border-radius: 5px;
+    width: 100%;
+    height: 40px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .amimate-loading-text {
     background: linear-gradient(to right, #ffffff 0, #fff 10%, #888888 20%);
     background-position: 0;
@@ -36,7 +49,6 @@ body {
     text-decoration: none;
     white-space: nowrap;
 }
-
 @-moz-keyframes shine {
     0% {
         background-position: 0;
